@@ -4,5 +4,6 @@ defmodule Metrics do
   def start() do
     :prometheus_httpd.start()
     Prometheus.Registry.register_collector(:prometheus_process_collector)
+    Metrics.Handler.setup()
   end
 end
